# MVA_linux_dev

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  prog.c
03_Text/: art.txt  randomize.sh
04_Debugging/: Makefile  range  range.c  range1.gdb  range2.gdb
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  protect.c  test.sh
07_Environmental/: Makefile.am  Makefile_old  clean.sh  configure.ac  rhasher.c  test.sh
08_I18n/: CMakeLists.txt  Makefile  guess.c  install.sh
08_I18n/po/ro/: guess.po
08_I18n/po/ru/: guess.po
09_PatchDiff/: Makefile  m1.patch  m2.patch  m3.patch  maze.c  normmaze.c
10_LibTesting/: CMakeLists.txt  Makefile  install.sh  test.sh
10_LibTesting/src/: Makefile  tests.c
10_LibTesting/tests/: buf.h  tests.c
11_Documenting/: CMakeLists.txt  Doxyfile  Makefile  guess.c  help.md  install.sh
11_Documenting/po/ru/: guess.po
12_InstallPackaging/: CMakeLists.txt  Makefile
12_InstallPackaging/po/ru/: guess.po
12_InstallPackaging/src/: Doxyfile  build.sh  guess.c  guess.h  install.sh  main.c  test.sh  uninstall.sh
12_InstallPackaging/tests/: test_guess.c
